various additions: new commands, functions, plus enum printer

--- a/gdb/data-directory/Makefile.in
+++ b/gdb/data-directory/Makefile.in
@@ -69,7 +69,9 @@ PYTHON_FILES = \
 	gdb/command/prompt.py \
 	gdb/command/explore.py \
 	gdb/function/__init__.py \
-	gdb/function/strfns.py
+	gdb/function/strfns.py \
+	gdb/command/faq.py \
+	gdb/function/memoize.py
 
 SYSTEM_GDBINIT_DIR = system-gdbinit
 SYSTEM_GDBINIT_INSTALL_DIR = $(DESTDIR)$(GDB_DATADIR)/$(SYSTEM_GDBINIT_DIR)
