--- a/gdb/data-directory/Makefile.in
+++ b/gdb/data-directory/Makefile.in
@@ -71,6 +71,7 @@ PYTHON_FILES = \
 	gdb/function/__init__.py \
 	gdb/function/strfns.py \
 	gdb/command/faq.py \
+	gdb/function/memcmp.py \
 	gdb/function/memoize.py
 
 SYSTEM_GDBINIT_DIR = system-gdbinit
