--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -1690,23 +1690,18 @@ po/$(PACKAGE).pot: force
 # Strictly speaking c-exp.c should therefore depend on
 # Makefile.in, but that was a pretty big annoyance.
 
+c-exp_PREFIX = c
+ada-exp_PREFIX = ada
+f-exp_PREFIX = f
+go-exp_PREFIX = go
+jv-exp_PREFIX = jv
+m2-exp_PREFIX = m2
+p-exp_PREFIX = p
+cp-name-parser_PREFIX = cpname
+
 .SUFFIXES: .y .l
 .y.c:
-	rm -f $@ $@.tmp
-	$(SHELL) $(YLWRAP) $< y.tab.c $@ -- $(YACC) $(YFLAGS) && mv $@ $@.tmp \
-		|| (rm -f $@; false)
-	sed -e '/extern.*malloc/d' \
-	     -e '/extern.*realloc/d' \
-	     -e '/extern.*free/d' \
-	     -e '/include.*malloc.h/d' \
-	     -e 's/\([^x]\)malloc/\1xmalloc/g' \
-	     -e 's/\([^x]\)realloc/\1xrealloc/g' \
-	     -e 's/\([ \t;,(]\)free\([ \t]*[&(),]\)/\1xfree\2/g' \
-	     -e 's/\([ \t;,(]\)free$$/\1xfree/g' \
-	     -e '/^#line.*y.tab.c/d' \
-	     -e "s/^\(#line.*\)`basename $<`/\1`echo $<|sed 's/\//\\\\\//g'`/" \
-	  < $@.tmp > $@
-	rm -f $@.tmp
+	$(YACC) $(YFLAGS) -b $* -p $($*_PREFIX)_ $< && mv $*.tab.c $@
 .l.c:
 	if [ "$(FLEX)" ] && $(FLEX) --version >/dev/null 2>&1; then \
 	    $(FLEX) -o$@ $< && \
