--- a/opcodes/configure.in
+++ b/opcodes/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright 2012, 2013 Free Software Foundation
+dnl   Copyright 2012 Free Software Foundation
 dnl
 dnl This file is free software; you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -45,15 +45,6 @@ AC_CHECK_TOOL(RANLIB, ranlib, :)
 dnl Default to a non shared library.  This may be overridden by the
 dnl configure option --enable-shared.
 AC_DISABLE_SHARED
-
-AC_ARG_ENABLE(host-shared,
-[AS_HELP_STRING([--enable-host-shared],
-		[build host code as shared libraries])],
-[host_shared=$enableval], [host_shared=no])
-if test "$host_shared" = yes; then
-  # Pretend.
-  enable_shared=yes
-fi
 
 LT_INIT
 
