--- a/gdb/configure.ac
+++ b/gdb/configure.ac
@@ -368,16 +368,15 @@ esac
 
 # --enable-gdb-pie builds gdb as a PIE and installs it as a Python
 # module.
+GDB_SO=
+PIE_FLAG=
 AC_ARG_ENABLE(gdb-pie,
 [AS_HELP_STRING([--enable-gdb-pie],
 		[build GDB as a position-independent executable])],
-[gdb_pie=yes], [gdb_pie=no])
-GDB_SO=
-PIE_FLAG=
-if test "$gdb_pie" = yes; then
-  GDB_SO=_gdb.so
-  PIE_FLAG=-pie
-fi
+[if test "$enable_gdb_pie" = yes; then
+   GDB_SO=_gdb.so
+   PIE_FLAG=-pie
+ fi])
 AC_SUBST(GDB_SO)
 AC_SUBST(PIE_FLAG)
 
